--- a/day_5/movieposter.html
+++ b/day_5/movieposter.html
@@ -8,12 +8,10 @@
 </head>
 <body>
    <center><i><h1>Kalki</h1></i>
-   <a href="https://en.wikipedia.org/wiki/Kalki_2898_AD" target="_blank"> <img src="10k coders/img1.jpg" width="200px"></a><hr></center> 
+   <a href="https://en.wikipedia.org/wiki/Kalki_2898_AD" target="_blank"> <img src="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/img1.jpg" width="200px"></a><hr></center> 
     <center><i><h1>Puspa2</h1></i>
-       <a href="https://en.wikipedia.org/wiki/Pushpa:_The_Rise" target="_blank"><img src="10k coders/img2.jpg" width="200px"></a><hr></center>
+       <a href="https://en.wikipedia.org/wiki/Pushpa:_The_Rise" target="_blank"><img src="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/img2.jpg" width="200px"></a><hr></center>
         <center><i><h1>Kick</h1></i>
-            <a href="https://en.wikipedia.org/wiki/Kick_(2009_film)" target="_blank"><img src="10k coders/img3.jpg" width="200px"></a><hr></center>
+            <a href="https://en.wikipedia.org/wiki/Kick_(2009_film)" target="_blank"><img src="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/img3.jpg" width="200px"></a><hr></center>
 </body>
 </html>
-relativepath1.txt
-Displaying relativepath1.txt.
