--- a/day_6/about_hero.html
+++ b/day_6/about_hero.html
@@ -9,14 +9,14 @@
 <h1>pawan kalyan</h1>
 <h3><a href="https://en.wikipedia.org/wiki/Pawan_Kalyan" target="_blank"> know about pawan kalyan</a></h3>
 <h3>Pawan Kalyan with download option</h3>
-<img src="./The_portrait_of_Pawan_Kalyan_(2024).jpg" alt="pk" width="100px">
+<img src="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/Shri_Konidela_Pawan_Kalyan.jpg" alt="pk" width="100px">
 <br>
-<a href="./The_portrait_of_Pawan_Kalyan_(2024).jpg" download >Download</a>
+<a href="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/Shri_Konidela_Pawan_Kalyan.jpg" download >Download</a>
 <h1>surya</h1>
 <h3><a href=" https://en.wikipedia.org/wiki/Suriya" target="_blank"> know about surya</a></h3>
 <h3>surya with download option</h3>
-<img src="./Soorya_sivakumar (1).jpg" alt="surya" width="100px">
+<img src="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/Suriya2011.jpg" alt="surya" width="100px">
 <br>
-<a href="./Soorya_sivakumar (1).jpg" download >Download</a>
+<a href="https://github.com/Raviteja0224/tasks_10kcoders/blob/main/images/Suriya2011.jpg" download >Download</a>
 </body>
 </html>
